tmp/other/vwhc_raw/validatingwebhookconfiguration-eks-aws-auth-configmap-validation-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: '{"apiVersion":"admissionregistration.k8s.io/v1","kind":"ValidatingWebhookConfiguration","metadata":{"annotations":{},"name":"eks-aws-auth-configmap-validation-webhook"},"webhooks":[{"admissionReviewVersions":["v1"],"clientConfig":{"caBundle":"LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lJT0ZZSVhzaGY0UUF3RFFZSktvWklodmNOQVFFTEJRQXdGVEVUTUJFR0ExVUUKQXhNS2EzVmlaWEp1WlhSbGN6QWVGdzB5TXpFeE1ERXhOVEkwTURWYUZ3MHpNekV3TWpreE5USTVNRF [...]

      '
  generation: 1
  name: eks-aws-auth-configmap-validation-webhook
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lJT0ZZSVhzaGY0UUF3RFFZSktvWklodmNOQVFFTEJRQXdGVEVUTUJFR0ExVUUKQXhNS2EzVmlaWEp1WlhSbGN6QWVGdzB5TXpFeE1ERXhOVEkwTURWYUZ3MHpNekV3TWpreE5USTVNRFZhTUJVeApFekFSQmdOVkJBTVRDbXQxWW1WeWJtVjBaWE13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLCkFvSUJBUUMyZzk1RkNXd1JxaVVwTENpYjhxYkFnMm91ZGxLelZPd2JGbFBCT2hKQ0tadUhJajZhOEFra09tSUQKOGh3bDBhRS90QWFSTSsxdjJHTE9UeldjU1NFMjIwY3UrcjY1dWdhQVQ1L0t0MzVNS1FueFhERkJ6bkhpd1lXQQo4YUhRUDBvb1E3Ql [...]
    url: https://127.0.0.1:21375/validate
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: eks-aws-auth-configmap-validation-webhook.amazonaws.com
  namespaceSelector:
    matchLabels:
      kubernetes.io/metadata.name: kube-system
  objectSelector: {}
  rules:
  - apiGroups:
    - ''
    apiVersions:
    - v1
    operations:
    - UPDATE
    resources:
    - configmaps
    scope: '*'
  sideEffects: None
  timeoutSeconds: 5
